--- a/modules/openapi-generator/src/main/resources/go-server/model.mustache
+++ b/modules/openapi-generator/src/main/resources/go-server/model.mustache
@@ -1,10 +1,19 @@
 {{>partial_header}}
 package {{packageName}}
+
 {{#models}}{{#imports}}
 {{#-first}}import (
 {{/-first}}	"{{import}}"{{#-last}}
 )
-{{/-last}}{{/imports}}{{#model}}{{#isEnum}}{{#description}}// {{{classname}}} : {{{description}}}{{/description}}
+{{/-last}}{{/imports}}
+
+import "errors" // FIXME: why not in #imports
+import "encoding/json" // FIXME: why not in #imports
+
+var _ = errors.New("") // to enforce the use of errors
+var _ = json.NewDecoder(nil) // to enforce the use of encoding/json
+
+{{#model}}{{#isEnum}}{{#description}}// {{{classname}}} : {{{description}}}{{/description}}
 type {{{classname}}} {{^format}}{{dataType}}{{/format}}{{{format}}}
 
 // List of {{{classname}}}
@@ -35,6 +44,35 @@ type {{classname}} struct {
 	{{name}} {{#isNullable}}*{{/isNullable}}{{{dataType}}} `json:"{{baseName}}{{^required}},omitempty{{/required}}"{{#vendorExtensions.x-go-custom-tag}} {{{.}}}{{/vendorExtensions.x-go-custom-tag}}`
 {{/vars}}
 }{{/isEnum}}
+
+// UnmarshalJSON parse JSON while respecting the default values specified
+func (o *{{classname}}) UnmarshalJSON(data []byte) error {
+    type Alias {{classname}} // Avoid infinite recursion
+    aux := Alias{
+		{{#vars}}
+		{{#defaultValue}}
+		{{^isArray}}
+		{{#isBoolean}}
+		{{name}}: {{{.}}},
+		{{/isBoolean}}
+		{{#isNumeric}}
+		{{name}}: {{{.}}},
+		{{/isNumeric}}
+		{{^isBoolean}}
+		{{^isNumeric}}
+		{{name}}: "{{{.}}}",
+		{{/isNumeric}}
+		{{/isBoolean}}
+		{{/isArray}}
+		{{/defaultValue}}
+		{{/vars}}
+	}
+    if err := json.Unmarshal(data, &aux); err != nil {
+        return err
+    }
+    *o = {{classname}}(aux)
+    return nil
+}
 
 // Assert{{classname}}Required checks if the required fields are not zero-ed
 func Assert{{classname}}Required(obj {{classname}}) error {
@@ -119,4 +157,33 @@ func Assert{{classname}}Required(obj {{classname}}) error {
 	{{/isNullable}}
 {{/Vars}}
 	return nil
+}
+
+// Assert{{classname}}Constraints checks if the values respects the defined constraints
+func Assert{{classname}}Constraints(obj {{classname}}) error {
+{{#Vars}}
+{{#minimum}}
+	if {{#isNullable}}obj.{{name}} != nil && *{{/isNullable}}obj.{{name}} < {{minimum}} {
+		return &ParsingError{Err: errors.New(errMsgMinValueConstraint)}
+	}
+{{/minimum}}
+{{#maximum}}
+	if {{#isNullable}}obj.{{name}} != nil && *{{/isNullable}}obj.{{name}} > {{maximum}} {
+		return &ParsingError{Err: errors.New(errMsgMaxValueConstraint)}
+	}
+{{/maximum}}
+{{/Vars}}
+	return nil
+}
+
+// AssertRecurse{{classname}}Required recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of {{classname}} (e.g. [][]{{classname}}), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurse{{classname}}Required(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		a{{classname}}, ok := obj.({{classname}})
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return Assert{{classname}}Required(a{{classname}})
+	})
 }{{/model}}{{/models}}
