--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/README.client.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/README.client.mustache
@@ -143,24 +143,34 @@ Class | Method | HTTP request | Description
 {{#modelPackage}}{{#models}}{{#model}} - [{{{modelPackage}}}.{{{classname}}}]({{modelDocPath}}{{{classname}}}.md){{/model}}{{/models}}{{/modelPackage}}
 {{^modelPackage}}No model defined in this package{{/modelPackage}}{{/modelDocs}}
 
-<a name="documentation-for-authorization"></a>
+<a id="documentation-for-authorization"></a>
 ## Documentation for Authorization
 
-{{^authMethods}}All endpoints do not require authorization.{{/authMethods}}{{#authMethods}}{{#-last}}Authentication schemes defined for the API:{{/-last}}{{/authMethods}}{{#authMethods}}
-
+{{^authMethods}}Endpoints do not require authorization.{{/authMethods}}
+{{#hasAuthMethods}}Authentication schemes defined for the API:{{/hasAuthMethods}}
+{{#authMethods}}
 <a name="{{name}}"></a>
 ### {{name}}
 
 {{#isApiKey}}- **Type**: API key
 - **API key parameter name**: {{keyParamName}}
-- **Location**: {{#isKeyInQuery}}URL query string{{/isKeyInQuery}}{{#isKeyInHeader}}HTTP header{{/isKeyInHeader}}{{/isApiKey}}{{#isBasicBasic}}
-- **Type**: HTTP basic authentication{{/isBasicBasic}}{{#isBasicBearer}}
-- **Type**: Bearer Authentication{{/isBasicBearer}}{{#isOAuth}}
+- **Location**: {{#isKeyInQuery}}URL query string{{/isKeyInQuery}}{{#isKeyInHeader}}HTTP header{{/isKeyInHeader}}
+{{/isApiKey}}
+{{#isBasicBasic}}
+- **Type**: HTTP basic authentication
+{{/isBasicBasic}}
+{{#isBasicBearer}}
+- **Type**: Bearer Authentication
+{{/isBasicBearer}}
+{{#isOAuth}}
 - **Type**: OAuth
 - **Flow**: {{flow}}
 - **Authorization URL**: {{authorizationUrl}}
 - **Scopes**: {{^scopes}}N/A{{/scopes}}{{#scopes}}  
-- {{scope}}: {{description}}{{/scopes}}{{/isOAuth}}{{/authMethods}}
+- {{scope}}: {{description}}{{/scopes}}
+{{/isOAuth}}
+
+{{/authMethods}}
 
 ## Build
 - SDK version: {{packageVersion}}{{^hideGenerationTimestamp}}
