--- a/modules/openapi-generator/src/main/resources/powershell/README.mustache
+++ b/modules/openapi-generator/src/main/resources/powershell/README.mustache
@@ -78,18 +78,13 @@ Class | Method | HTTP request | Description
 No model defined in this package
 {{/modelPackage}}
 
+<a name="documentation-for-authorization"></a>
 ## Documentation for Authorization
 
-{{^authMethods}}
-All endpoints do not require authorization.
-{{/authMethods}}
+{{^authMethods}}Endpoints do not require authorization.{{/authMethods}}
+{{#hasAuthMethods}}Authentication schemes defined for the API:{{/hasAuthMethods}}
 {{#authMethods}}
-{{#last}}
-Authentication schemes defined for the API:
-{{/last}}
-{{/authMethods}}
-{{#authMethods}}
-
+<a name="{{name}}"></a>
 ### {{name}}
 
 {{#isApiKey}}- **Type**: API key
