--- a/modules/openapi-generator/src/main/resources/kotlin-server/libraries/ktor/README.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-server/libraries/ktor/README.mustache
@@ -69,17 +69,11 @@ No model defined in this package
 {{/modelPackage}}
 {{/generateModelDocs}}
 
-<a name="documentation-for-authorization"></a>{{! TODO: optional documentation for authorization? }}
+<a name="documentation-for-authorization"></a>
 ## Documentation for Authorization
 
-{{^authMethods}}
-All endpoints do not require authorization.
-{{/authMethods}}
-{{#authMethods}}
-{{#last}}
-Authentication schemes defined for the API:
-{{/last}}
-{{/authMethods}}
+{{^authMethods}}Endpoints do not require authorization.{{/authMethods}}
+{{#hasAuthMethods}}Authentication schemes defined for the API:{{/hasAuthMethods}}
 {{#authMethods}}
 <a name="{{name}}"></a>
 ### {{name}}
