--- a/modules/openapi-generator/src/main/resources/cpp-qt-client/README.mustache
+++ b/modules/openapi-generator/src/main/resources/cpp-qt-client/README.mustache
@@ -148,11 +148,14 @@ servers:
 - url: https://localhost:8080/v1
 ```
 
+<a name="documentation-for-authorization"></a>
 ## Documentation for Authorization
 
-{{^authMethods}}All endpoints do not require authorization.
-{{/authMethods}}Authentication schemes defined for the API:
-{{#authMethods}}### {{name}}
+{{^authMethods}}Endpoints do not require authorization.{{/authMethods}}
+{{#hasAuthMethods}}Authentication schemes defined for the API:{{/hasAuthMethods}}
+{{#authMethods}}
+<a name="{{name}}"></a>
+### {{name}}
 
 {{#isApiKey}}
 
