--- a/modules/openapi-generator/src/main/resources/go-server/model.mustache
+++ b/modules/openapi-generator/src/main/resources/go-server/model.mustache
@@ -45,33 +45,28 @@ type {{classname}} struct {
 {{/vars}}
 }{{/isEnum}}
 
-// UnmarshalJSON parse JSON while respecting the default values specified
+// UnmarshalJSON sets *m to a copy of data while respecting defaults if specified.
 func (o *{{classname}}) UnmarshalJSON(data []byte) error {
-    type Alias {{classname}} // Avoid infinite recursion
-    aux := Alias{
-		{{#vars}}
-		{{#defaultValue}}
-		{{^isArray}}
-		{{#isBoolean}}
-		{{name}}: {{{.}}},
-		{{/isBoolean}}
-		{{#isNumeric}}
-		{{name}}: {{{.}}},
-		{{/isNumeric}}
-		{{^isBoolean}}
-		{{^isNumeric}}
-		{{name}}: "{{{.}}}",
-		{{/isNumeric}}
-		{{/isBoolean}}
-		{{/isArray}}
-		{{/defaultValue}}
-		{{/vars}}
-	}
-    if err := json.Unmarshal(data, &aux); err != nil {
-        return err
-    }
-    *o = {{classname}}(aux)
-    return nil
+	{{#vars}}
+	{{#defaultValue}}
+	{{^isArray}}
+	{{#isBoolean}}
+	m.{{name}} = {{{.}}}
+	{{/isBoolean}}
+	{{#isNumeric}}
+	m.{{name}} = {{{.}}}
+	{{/isNumeric}}
+	{{^isBoolean}}
+	{{^isNumeric}}
+	m.{{name}} = "{{{.}}}"
+	{{/isNumeric}}
+	{{/isBoolean}}
+	{{/isArray}}
+	{{/defaultValue}}
+	{{/vars}}
+
+	type Alias {{classname}} // To avoid infinite recursion
+    return json.Unmarshal(data, (*Alias)(m))
 }
 
 // Assert{{classname}}Required checks if the required fields are not zero-ed
