Improve default value handling for string
Co-authored-by: Ween Jiann <16207788+lwj5@users.noreply.github.com>

--- a/modules/openapi-generator/src/main/resources/go-server/controller-api.mustache
+++ b/modules/openapi-generator/src/main/resources/go-server/controller-api.mustache
@@ -237,10 +237,15 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
 	{{^isInteger}}
 	{{^isBoolean}}
 	{{^isArray}}
-	{{paramName}}Param := "{{#defaultValue}}{{defaultValue}}{{/defaultValue}}"
+	{{#defaultValue}}
+	{{paramName}}Param := "{{defaultValue}}"
 	if query.Has("{{baseName}}") {
 		{{paramName}}Param = query.Get("{{baseName}}")
 	}
+	{{/defaultValue}}
+	{{#defaultValue}}
+	{{paramName}}Param := query.Get("{{baseName}}")
+	{{/defaultValue}}
 	{{/isArray}}
 	{{/isBoolean}}
 	{{/isInteger}}
